# VideoPlayer

./: .editorconfig  .gitignore  .gitmodules  README.md  android.keystore  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts  test_dependencies.gradle  test_dependencies.gradle.kts
.github/workflows/: release.yml
MediaSpider/: build.gradle.kts
MediaSpider/src/main/: AndroidManifest.xml
MediaSpider/src/main/assets/: file_site_config.json  movie_site_config.json
QMediaPlayer/: build.gradle  build.gradle.kts
QMediaPlayer/src/main/: AndroidManifest.xml
QMediaPlayer/src/main/res/drawable/: bg_dialog.xml  bg_media_controller_btn.xml  bg_round_black.xml  ic_brightness.xml  ic_change_player.xml  ic_danmu_off.xml  ic_danmu_on.xml  ic_float_window.xml  ic_full_screen.xml  ic_hd.xml  ic_lock.xml  ic_render.xml  ic_scale.xml  ic_scale_type.xml  ic_scissors.xml  ic_skip_next.xml  ic_skip_preview.xml  play_progress_drawable.xml  round_black_bg.xml
QMediaPlayer/src/main/res/layout/: activity_play_f_fmepg_player.xml  dialog_brightness.xml  dialog_progress.xml  dialog_volume.xml  float_window.xml  float_window_land.xml  float_window_port.xml  media_controller_land.xml  media_controller_net_land.xml  media_controller_port.xml
QMediaPlayer/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: movie_site.json  tv_circuits.json
app/src/main/res/anim/: animation_single_video_player_progress_popwindow_enter.xml  animation_single_video_player_progress_popwindow_exit.xml  fade_in.xml  fade_out.xml  recyclerview_list_translate_alpha_scale.xml  slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
app/src/main/res/animator/: animator_single_video_player_layout_appear.xml  animator_single_video_player_layout_disappearing.xml
app/src/main/res/drawable/: activity_single_video_player_control_floatwindow.xml  activity_single_video_player_control_play.xml  activity_single_video_player_control_stop.xml  bg_black_tag.xml  bg_grey_tag.xml  bg_splash.xml  bg_video_thumbnail.xml  gradient_bg.xml  gradient_bg_hover.xml  ic_baseline_keyboard_arrow_right_24.xml  ic_change.xml  ic_default_thumbnail.xml  ic_default_tv.xml  ic_default_tv_channel.xml  ic_delete.xml  ic_douyu.xml  ic_download.xml  ic_internet.xml  ic_local.xml  ic_me.xml  ic_more.xml  ic_play_arrow.xml  ic_title_douyu.xml  ic_title_like.xml  ic_title_ustv.xml  ic_tv.xml  ic_video.xml  ic_video_default_thumbnail.xml  ic_video_player_back.xml  ic_video_player_back_normal.xml  ic_video_player_back_pressed.xml  ic_video_player_battery_0.xml  ic_video_player_float_window.xml  ic_video_player_follow.xml  ic_video_player_pause.xml  ic_video_player_play.xml  ic_video_white.xml  list_selector.xml  main_bottom_nav_menu_select.xml  nav_item_color_state.xml  (+1 more)
app/src/main/res/drawable-xhdpi/: image_bg.xml  list_selector.xml
app/src/main/res/layout/: about_fragment.xml  activity_danmu.xml  activity_default_video_player.xml  activity_double_moive_player.xml  activity_home.xml  (+63 more)
buildSrc/: README.md  build.gradle.kts
common/: README.md  build.gradle.kts
common/src/main/: AndroidManifest.xml
danmu/: README.md  build.gradle  build.gradle.kts
danmu/src/main/: AndroidManifest.xml
danmu/src/main/java/: danmu.puml
disklrucache-2.0.2/: build.gradle
ffmpeg/: CMakeLists.txt  README.md  build.gradle.kts
ffmpeg/src/androidTest/java/com/tainzhi/android/ffmpeg/: ExampleInstrumentedTest.kt
ffmpeg/src/androidTest/java/com/tanzhi/android/ffmpeg/: ExampleInstrumentedTest.kt
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: android_log.h  cmdutils.c  cmdutils.h  config.h  ffmpeg-invoke.cpp  ffmpeg-invoker.c  ffmpeg-invoker.cpp  ffmpeg-invoker.h  ffmpeg.h  ffmpeg_thread.c  ffmpeg_thread.h
ffmpeg/src/main/cpp/ffmpeg/: cmdutils.c  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c
ffmpeg/src/main/cpp/ffmpeg-invoker/: ffmpeg-invoker.cpp  ffmpeg.c  ffmpeg_invoker.cpp  ffmpeg_thread.c
ffmpeg/src/main/cpp/ffmpeg-invoker/include/: android_log.h  config.h  ffmpeg-invoker.h  invoke_log.h  log.h
ffmpeg/src/main/cpp/ffmpeg-player/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  JNICallback.cpp  JNICallback.h  Player.cpp  Player.h  VideoChannel.cpp  VideoChannel.h  ffmpeg-player.cpp  ffmpeg_player.cpp  log.h  player_log.h
ffmpeg/src/main/cpp/ffmpeg-player/util/: Constants.h  macro.h  safe_queue.h
ffmpeg/src/main/cpp/ffmpeg_invoker/: cmdutils.c  ffmpeg.c  ffmpeg_filter.c  ffmpeg_opt.c
ffmpeg/src/main/cpp/ffmpeg_invoker/invoker_headers/: android_log.h  ffmpeg_thread.h
ffmpeg/src/main/cpp/include/libavresample/: avresample.h
ffmpeg/src/main/cpp/include/libavutil/: ffversion.h  thread.h  timer.h
ffmpeg/src/main/cpp/pusher/: AudioEncoderChannel.cpp  AudioEncoderChannel.h  PushCallback.cpp  PushCallback.h  RTMPModel.cpp  RTMPModel.h  VideoEncoderChannel.cpp  VideoEncoderChannel.h  log.h  pusher-lib.cpp  pusher.h  pusher_lib.cpp  pusher_log.h
ffmpeg/src/main/java/com/tainzhi/android/ffmpeg/: Constants.kt  FFmpegCmd.kt  FFmpegCmd1.kt  FFmpegInvoker.kt  FFmpegPlayer.kt  FFmpegPlayerManager.kt  Player.kt  PusherManager.kt
ffmpeg/src/main/jni/prebuild/pkgconfig/: libavdevice.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeg/src/main/jniLibs/: ffmpeg.c
ffmpeg/src/main/jniLibs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeg/src/main/jniLibs/include/libavcodec/: mathops.h  xvmc.h
ffmpeg/src/main/jniLibs/include/libavformat/: network.h  os_support.h
ffmpeg/src/main/jniLibs/include/libavutil/: internal.h  libm.h  thread.h  timer.h
ffmpeg/src/main/jniLibs/pkgconfig/: libavcodec.pc  libavfilter.pc
ffmpeg/src/test/java/com/tainzhi/android/ffmpeg/: LoadLibTest.kt
ffmpeg/src/test/java/com/tanzhi/android/ffmpeg/: ExampleUnitTest.kt  LoadLibTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+745 files in other folders)
